--- a/pom.xml
+++ b/pom.xml
@@ -122,11 +122,11 @@
         </dependency>
 
         <!-- test external dependency -->
+        <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
         <dependency>
             <groupId>org.apache.jena</groupId>
-            <artifactId>jena</artifactId>
+            <artifactId>jena-core</artifactId>
             <version>3.12.0</version>
-            <type>pom</type>
         </dependency>
     </dependencies>
 
