--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <finalName>testing</finalName>
         <resources>
             <resource>
-                <directory>src</directory>
+                <directory>src/main/java</directory>
             </resource>
         </resources>
         <outputDirectory>module/MOD-INF/classes</outputDirectory>
@@ -41,7 +41,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>src</source>
+                                <source>src/main/java</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -100,7 +100,7 @@
                 <version>3.0.0</version>
                 <configuration>
                     <descriptors>
-                        <descriptor>module.xml</descriptor>
+                        <descriptor>src/assembly/module.xml</descriptor>
                     </descriptors>
                 </configuration>
             </plugin>
