Add automatic release deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,12 @@ script:
   - mvn clean compile
   - mvn test -B
   - mvn package assembly:single
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file:
+    - target/testing-*.jar
+  skip_cleanup: true
+  on:
+    tags: true
