--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   api_key: $GITHUB_TOKEN
   file_glob: true
   file:
-    - target/testing-*.jar
+    - target/testing-*.zip
   skip_cleanup: true
   on:
     tags: true
